--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,52 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Home</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"clear
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<title>Home</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link href="/styles.css" rel="stylesheet">
+	<style>
+		html, body {
+			height: 100%;
+		}
+		.wrapper {
+			min-height: 100%;
+			display: flex;
+			flex-direction: column;
+		}
+		main {
+			flex: 1;
+		}
+	</style>
 </head>
 <body>
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Shopping Cart</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 750px;">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/admin/signup">Signup(Admin)</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/signup">Signup(User)</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/loginadmin">Login(Admin)</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/login">Login(User)</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
+<div class="wrapper">
+	<header>
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
+				<a class="navbar-brand" href="/">Niles</a>
+			</div>
+		</div>
+	</header>
 
-<div class = "container text-center">
-	
-	<h1>Welcome to Niles</h1>
-	<h3>Are you from management department ?</h3>
-	<h3><a href="/loginadmin">Admin Login</a></h3>
-	<h3><a href="/admin/signup">Admin Registration</a></h3>
-	
-	<h3>Are you a customer ?</h3>
-	<h3><a href="/login">Customer Login</a></h3>
-	<h3><a href="/signup">Customer Registration</a></h3>
-	
+	<main>
+		<div class="container text-center mt-5">
+			<h2 class="mb-4">Welcome to Niles! Your own online shop!</h2>
+			<div class="d-flex flex-column align-items-center">
+				<div class="col-md-6">
+					<div class="card mb-4 shadow">
+						<div class="card-body">
+							<h3 class="card-title">Existing users please Log in!</h3>
+							<a href="/login" class="btn btn-primary d-block mt-3">Login</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="card mb-4 shadow">
+						<div class="card-body">
+							<h3 class="card-title">Are you a new guy from the Management Department?</h3>
+							<a href="/admin/signup" class="btn btn-outline-primary d-block mt-2">Admin Registration</a>
+						</div>
+					</div>
+					<div class="card shadow">
+						<div class="card-body">
+							<h3 class="card-title">Are you a new Customer?</h3>
+							<a href="/signup" class="btn btn-outline-success d-block mt-2">Customer Registration</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer class="bg-dark text-white text-center py-3">
+		<p>&copy; 2024 Niles. All Rights Reserved.</p>
+	</footer>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
 </body>
 </html>
