--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,84 +6,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/styles.css" rel="stylesheet">
+    <style>
+        html, body {
+            height: 100%;
+        }
+        .wrapper {
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        main {
+            flex: 1;
+        }
+    </style>
 </head>
 <body>
-<header>
-    
-    <div class = "container text-center">
-    <a class="btn btn-primary" data-th-href="@{/logout}" href="#">Logout</a>
-    <h3>
-    <a class="nav-link active" aria-current="page" data-th-href="@{/user}" href="#">Home</a>
-    </h3>
-    <div>
-    	<h3><a data-th-href = "@{/user/purchases}">View Cart</a></h3>
-    </div>
-    <div>
-    	<form class="d-flex" style="margin-left: 10px;">
-                        <input class="form-control me-2" name="q" type="search" placeholder="Search"
-                               aria-label="Search">
-                        <button class="btn btn-success" type="submit">Search</button>
-                    </form>
-    </div>
-    </div>
-</header>
+<div class="wrapper">
+    <header>
+        <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/">Niles</a>
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-primary me-2" data-th-href="@{/user}" href="#">Home</a>
+                    <a class="btn btn-secondary" data-th-href="@{/user/purchases}" href="#">View Cart</a>
+                    <a class="btn btn-primary" data-th-href="@{/logout}" href="#">Logout</a>
+                </div>
+                <form class="d-flex" style="margin-left: 10px;">
+                    <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </header>
 
-<main>
-    <section class="container mt-3">
-        <div data-th-if="${apparelList.empty}" class="text-center text-muted">
-            No Apparels Available
-        </div>
-    
-        
-        <div data-th-each="apparel: ${apparelList}">
-          <table class = "table table-stripped table-bordered">
-          <tbody>
-			<thead class = "thread-dark">
-            <tr>
-              <th>Vendor</th>
-              <th>Product Name</th>
-              <th>Price</th>
-              <th>Image</th>
-            </tr>
-            </thead>
-			<thead class="thread-dark">
-            <tr data-th-object = "${apparel}">
-              <td data-th-text="*{brandName}"></td>
-              <td data-th-text="*{genericName}"></td>
-              <td data-th-text="*{discountedPrice}"></td>
-              <td>
-              	<img class = "box large" data-th-src = "*{imageUrl}">
-              </td>
-              <form data-th-action="@{/user/purchase}" method="post">
-                            <input type="hidden" name="apparelId" value="0" data-th-value="*{id}">
-                            <td><button type="submit" style="margin-left: 70px;" class="btn btn-warning">Buy Item</button></td>
-                        </form>
-  
-            </tr>
-            </thead>
-            </tbody>
-          <table>
-        </div>
-    </section>
-</main>
+    <main>
+        <section class="container mt-3">
+            <div data-th-if="${apparelList.empty}" class="text-center text-muted">
+                No Apparels Available
+            </div>
+            <div data-th-each="apparel: ${apparelList}">
+                <table class="table table-stripped table-bordered">
+                    <thead class="thread-dark">
+                    <tr>
+                        <th>Vendor</th>
+                        <th>Product Name</th>
+                        <th>Price</th>
+                        <th>Image</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr data-th-object="${apparel}">
+                        <td data-th-text="*{brandName}"></td>
+                        <td data-th-text="*{genericName}"></td>
+                        <td data-th-text="*{discountedPrice}"></td>
+                        <td>
+                            <img class="box large" data-th-src="*{imageUrl}">
+                        </td>
+                        <td>
+                            <form data-th-action="@{/user/purchase}" method="post">
+                                <input type="hidden" name="apparelId" value="0" data-th-value="*{id}">
+                                <button type="submit" class="btn btn-warning">Buy Item</button>
+                            </form>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 Niles. All Rights Reserved.</p>
+    </footer>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
 <style>
-    img{
+    img {
         max-width: 100%;
         max-height: 100%;
         display: block; /* remove extra space below image */
     }
-    .box{
-        width: 250px;        
+    .box {
+        width: 250px;
         border: 5px solid black;
-    }    
-    .box.large{
+    }
+    .box.large {
         height: 300px;
     }
-    .box.small{
+    .box.small {
         height: 100px;
     }
 </style>
