--- a/src/main/resources/templates/loginerror.html
+++ b/src/main/resources/templates/loginerror.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Error Page</title>
+    <title>Login Error</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -33,16 +33,10 @@
 
     <main>
         <div class="container text-center mt-5">
-            <h1 class="text-danger">Oops! Something Went Wrong</h1>
-            <p class="text-muted mt-3">We encountered an issue while processing your request.</p>
-            <p class="text-muted">Please try again later or contact support if the problem persists.</p>
-
-            <div class="mt-4">
-                <img src="https://media.tenor.com/u4mpua8vD3IAAAAi/%C3%BCzg%C3%BCnkedikuzeyefe.gif"
-                     alt="Error Image" class="img-fluid rounded error-image">
-            </div>
-
-            <a href="/" class="btn btn-primary mt-4">Go Back to Home</a>
+            <h1 class="text-danger">Login Error</h1>
+            <p class="lead">Wrong login credentials. Please try again.</p>
+            <a href="/login" class="btn btn-primary">Go back to Login</a>
+            <a href="/" class="btn btn-secondary">Go to Home</a>
         </div>
     </main>
 
