--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,76 +1,99 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Signup</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<title>Signup</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link href="/styles.css" rel="stylesheet">
+	<style>
+		html, body {
+			height: 100%;
+		}
+		.wrapper {
+			min-height: 100%;
+			display: flex;
+			flex-direction: column;
+		}
+		main {
+			flex: 1;
+		}
+	</style>
 </head>
-<body class>
-<div class="container col-md-5">
-		<div class="card" style="margin-top: 20px;">
-			<div class="card-body">
-					<form method="post" data-th-object="${user}">
-						<caption>
-					<h2 class="text-center">
-            			SignUp
-					</h2>
-				</caption>
-
-				<fieldset class="form-group">
-					
-        <input id="firstName" class="form-control" data-th-field="*{firstName}"
-               placeholder="First Name"
-               required autofocus="autofocus"/>
-				</fieldset>
-				<fieldset class="form-group">
-        <input id="lastName" class="form-control" data-th-field="*{lastName}"
-               placeholder="Last Name"
-               required autofocus="autofocus"/>
-				</fieldset>
-				
-				<fieldset class="form-group">
-					
-        <input type="email"
-                class="form-control"
-                placeholder="E - mail"
-                id="email" data-th-field="*{email}" required
-                autofocus="autofocus"/>
-				</fieldset>
-				<fieldset class="form-group">
-        <input id="password" class="form-control" type="password" data-th-field="*{password}"
-               placeholder="password"
-               required
-               autofocus="autofocus"/>
-				</fieldset>
-				<fieldset class="form-group">
-        <select id="Gender" class="form-select" data-th-field="*{sex}">
-            <option data-th-each="option : ${T(com.koushan.niles.model.Sex).values()}"
-                    data-th-value="${option}" data-th-text="${option.displayName}"></option>
-        </select>
-				</fieldset>
-				<fieldset class="form-group">
-				
-            <input type="tel" id="contact-no" class="form-control" data-th-field="*{contactNo}"
-                   required
-                   pattern="[0-9]{10}"
-                   placeholder="10 digit mobile number">
-				</fieldset>
-				<fieldset class="form-group">
-        <select class="form-select" id="preference" data-th-field="*{preference}">
-            <option data-th-each="option : ${T(com.koushan.niles.model.Preference).values()}"
-                    data-th-value="${option}" data-th-text="${option.displayName}"></option>
-        </select>
-				</fieldset>
-				<button type="submit" class="btn btn-primary" style="margin:10px 210px;">Register</button>
-				<div class="text-center pb-3">Already registered? <a href="/" data-th-href="@{/login}">Login</a></div>
-				</form>
+<body>
+<div class="wrapper">
+	<header>
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
+				<a class="navbar-brand" href="/">Niles</a>
 			</div>
 		</div>
-	</div>
+	</header>
+
+	<main>
+		<div class="container col-md-6 my-5">
+			<div class="card shadow-lg">
+				<div class="card-body">
+					<form method="post" data-th-object="${user}">
+						<h2 class="text-center mb-4">Sign Up</h2>
+
+						<fieldset class="form-group mb-3">
+							<input id="firstName" class="form-control" data-th-field="*{firstName}"
+								   placeholder="First Name" required autofocus="autofocus"/>
+						</fieldset>
+
+						<fieldset class="form-group mb-3">
+							<input id="lastName" class="form-control" data-th-field="*{lastName}"
+								   placeholder="Last Name" required autofocus="autofocus"/>
+						</fieldset>
+
+						<fieldset class="form-group mb-3">
+							<input type="email" class="form-control" placeholder="E-mail" id="email"
+								   data-th-field="*{email}" required autofocus="autofocus"/>
+						</fieldset>
+
+						<fieldset class="form-group mb-3">
+							<input id="password" class="form-control" type="password" data-th-field="*{password}"
+								   placeholder="Password" required autofocus="autofocus"/>
+						</fieldset>
+
+						<fieldset class="form-group mb-3">
+							<select id="Gender" class="form-select" data-th-field="*{sex}">
+								<option data-th-each="option : ${T(com.koushan.niles.model.Sex).values()}"
+										data-th-value="${option}" data-th-text="${option.displayName}"></option>
+							</select>
+						</fieldset>
+
+						<fieldset class="form-group mb-3">
+							<input type="tel" id="contact-no" class="form-control" data-th-field="*{contactNo}"
+								   required pattern="[0-9]{10}" placeholder="10-digit mobile number"/>
+						</fieldset>
+
+						<fieldset class="form-group mb-4">
+							<select class="form-select" id="preference" data-th-field="*{preference}">
+								<option data-th-each="option : ${T(com.koushan.niles.model.Preference).values()}"
+										data-th-value="${option}" data-th-text="${option.displayName}"></option>
+							</select>
+						</fieldset>
+
+						<button type="submit" class="btn btn-primary btn-block mb-3">Register</button>
+						<div class="text-center">
+							Already registered? <a href="/" data-th-href="@{/login}">Login</a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer class="bg-dark text-white text-center py-3">
+		<p>&copy; 2024 Niles. All Rights Reserved.</p>
+	</footer>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
 </body>
 </html>
