--- a/src/main/resources/templates/signuperror.html
+++ b/src/main/resources/templates/signuperror.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Error Page</title>
+    <title>Signup Error</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,17 +32,10 @@
     </header>
 
     <main>
-        <div class="container text-center mt-5">
-            <h1 class="text-danger">Oops! Something Went Wrong</h1>
-            <p class="text-muted mt-3">We encountered an issue while processing your request.</p>
-            <p class="text-muted">Please try again later or contact support if the problem persists.</p>
-
-            <div class="mt-4">
-                <img src="https://media.tenor.com/u4mpua8vD3IAAAAi/%C3%BCzg%C3%BCnkedikuzeyefe.gif"
-                     alt="Error Image" class="img-fluid rounded error-image">
-            </div>
-
-            <a href="/" class="btn btn-primary mt-4">Go Back to Home</a>
+        <div class="container text-center my-5">
+            <h1 class="text-danger">Sign up Error</h1>
+            <p class="lead">There was an error during signup.</p>
+            <p class="lead">Please <a href="/" data-th-href="@{/signup}">Sign up as customer</a> or <a href="/" data-th-href="@{/admin/signup}">Sign up as admin</a> again.</p>
         </div>
     </main>
 
